tests/paczka1/fuzzy1/90673395.err
Error in line 3: S720 S720 57,6
Error in line 5: S720 A227 77,1
Error in line 7: eqmtruGStU S55 24,5
Error in line 16: lGR S950 61,8
Error in line 18: S720 S720 57,7
Error in line 23: Ocn S720 66,0
Error in line 11: T7D3kgYMw A227 73,2
Error in line 25: Ocn A227 51,1
